--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <footer>
             <p class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-            Coded by <a href="https://github.com/20ArwaHussain">20ArwaHussain</a>.
+            Coded by <a href="https://github.com/20Arwa">20Arwa</a>.
             </p>
         </footer>
     </div>
